experiments: Create new operator that uses a workflow part 1